# TestSolLib

./: CMakeLists.txt  CPlatform.txt  README.md  VSCompileLink.txt  default_lists.cmake
examples/customization/: CMakeLists.txt
examples/require_dll_example/: CMakeLists.txt
examples/require_dll_example/include/my_object/: my_object.hpp
examples/require_dll_example/source/: my_object.cpp
examples/source_proj/allocation_limit/: CMakeLists.txt
examples/source_proj/any_return/: CMakeLists.txt
examples/source_proj/args_from_container/: CMakeLists.txt
examples/source_proj/arguments_to_scripts/: CMakeLists.txt
examples/source_proj/as_function/: CMakeLists.txt
examples/source_proj/as_function_usertype_member_variable/: CMakeLists.txt
examples/source_proj/as_returns/: CMakeLists.txt
examples/source_proj/as_table_ipairs/: CMakeLists.txt
examples/source_proj/basic/: CMakeLists.txt
examples/source_proj/c_array/: CMakeLists.txt
examples/source_proj/c_call/: CMakeLists.txt
examples/source_proj/calling_lua_functions/: CMakeLists.txt
examples/source_proj/config/: CMakeLists.txt
examples/source_proj/container_usertype_as_container/: CMakeLists.txt
examples/source_proj/container_with_pairs/: CMakeLists.txt
examples/source_proj/containers/: CMakeLists.txt
examples/source_proj/containers_as_table/: CMakeLists.txt
examples/source_proj/coroutine/: CMakeLists.txt
examples/source_proj/coroutine_main/: CMakeLists.txt
examples/source_proj/coroutine_multiple_stacks/: CMakeLists.txt
examples/source_proj/coroutine_state/: CMakeLists.txt
examples/source_proj/coroutine_thread/: CMakeLists.txt
examples/source_proj/custom_reader/: CMakeLists.txt
examples/source_proj/customization_base_object_catch/: CMakeLists.txt
examples/source_proj/customization_convert_on_get/: CMakeLists.txt
examples/source_proj/customization_global_transparent_argument/: CMakeLists.txt
examples/source_proj/customization_multiple/: CMakeLists.txt
examples/source_proj/dump/: CMakeLists.txt
examples/source_proj/dynamic_object/: CMakeLists.txt
examples/source_proj/environment_snooping/: CMakeLists.txt
examples/source_proj/environment_state/: CMakeLists.txt
examples/source_proj/environment_state_2/: CMakeLists.txt
examples/source_proj/environments/: CMakeLists.txt
examples/source_proj/environments_on_functions/: CMakeLists.txt
examples/source_proj/erase_demo/: CMakeLists.txt
examples/source_proj/error_handler/: CMakeLists.txt
examples/source_proj/exception_handler/: CMakeLists.txt
examples/source_proj/first_snippet/: CMakeLists.txt
examples/source_proj/functions/: CMakeLists.txt
examples/source_proj/functions_all/: CMakeLists.txt
examples/source_proj/functions_easy/: CMakeLists.txt
examples/source_proj/functions_empty_arguments/: CMakeLists.txt
examples/source_proj/index_and_newindex_usertype/: CMakeLists.txt
examples/source_proj/indirect_function_calls/: CMakeLists.txt
examples/source_proj/inheritance/: CMakeLists.txt
examples/source_proj/lazy_demo/: CMakeLists.txt
examples/source_proj/lua_inheritance/: CMakeLists.txt
examples/source_proj/lua_stream/: CMakeLists.txt
examples/source_proj/lua_value/: CMakeLists.txt
examples/source_proj/make_tables/: CMakeLists.txt
examples/source_proj/metatable_customization/: CMakeLists.txt
examples/source_proj/metatable_key_low_level/: CMakeLists.txt
examples/source_proj/multi_results/: CMakeLists.txt
examples/source_proj/multiple_return/: CMakeLists.txt
examples/source_proj/multiple_returns_from_lua/: CMakeLists.txt
examples/source_proj/multiple_returns_to_lua/: CMakeLists.txt
examples/source_proj/my_panic/: CMakeLists.txt
examples/source_proj/namespacing/: CMakeLists.txt
examples/source_proj/object_lifetime/: CMakeLists.txt
examples/source_proj/open_multiple_libraries/: CMakeLists.txt
examples/source_proj/opening_a_state/: CMakeLists.txt
examples/source_proj/opening_state_on_raw_lua/: CMakeLists.txt
examples/source_proj/optional_with_iteration/: CMakeLists.txt
examples/source_proj/overloading/: CMakeLists.txt
examples/source_proj/overloading_with_fallback/: CMakeLists.txt
examples/source_proj/overloading_with_members/: CMakeLists.txt
examples/source_proj/overridable_function_members/: CMakeLists.txt
examples/source_proj/pairs/: CMakeLists.txt
examples/source_proj/pairs_with_raw_functions/: CMakeLists.txt
examples/source_proj/pointer_lifetime/: CMakeLists.txt
examples/source_proj/preparing_environments/: CMakeLists.txt
examples/source_proj/property/: CMakeLists.txt
examples/source_proj/protect/: CMakeLists.txt
examples/source_proj/protected_functions/: CMakeLists.txt
examples/source_proj/read_only/: CMakeLists.txt
examples/source_proj/reading_functions/: CMakeLists.txt
examples/source_proj/references_in_lambdas/: CMakeLists.txt
examples/source_proj/require/: CMakeLists.txt
examples/source_proj/require_override_behavior/: CMakeLists.txt
examples/source_proj/running_lua_code/: CMakeLists.txt
examples/source_proj/running_lua_code_low_level/: CMakeLists.txt
examples/source_proj/running_lua_code_safely/: CMakeLists.txt
examples/source_proj/runtime_additions/: CMakeLists.txt
examples/source_proj/runtime_extension/: CMakeLists.txt
examples/source_proj/script_error_handling/: CMakeLists.txt
examples/source_proj/self_call/: CMakeLists.txt
examples/source_proj/self_from_lua/: CMakeLists.txt
examples/source_proj/set_and_get_variables/: CMakeLists.txt
examples/source_proj/set_and_get_variables_exists/: CMakeLists.txt
examples/source_proj/shared_ptr/: CMakeLists.txt
examples/source_proj/shared_ptr_inheritance/: CMakeLists.txt
examples/source_proj/shared_ptr_modify_in_place/: CMakeLists.txt
examples/source_proj/simple_functions/: CMakeLists.txt
examples/source_proj/simple_structs/: CMakeLists.txt
examples/source_proj/singleton/: CMakeLists.txt
examples/source_proj/stack_aligned_function/: CMakeLists.txt
examples/source_proj/stack_aligned_stack_handler_function/: CMakeLists.txt
lua-5.4.4/: CMakeLists.txt
(+37 files in other folders)
